# Eternal-TeleSales-analysis

./: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
data_setes/: dataset_one.csv
data_sets/: dataset_three.csv  dataset_two.csv
logs/: current_log.log.2024-09-12_00-25  current_log.log.2024-09-12_08-40  current_log.log.2024-09-12_11-47  current_log.log.2024-09-12_13-36  current_log.log.2024-09-12_13-38  current_log.log.2024-09-12_13-41  current_log.log.2024-09-12_13-44
src/: main.py
src/analysis/: best_salesperson.py  department_breakdown.py  extra_insight_one.py  extra_insight_two.py  it_data.py  marketing_address_info.py  top_3.py  top_3_most_sold_per_department_nl.py
src/data_output/best_salesperson.csv/: .part-00000-7e6c96e8-5965-4017-9ffd-3abdf3ba96bb-c000.csv.crc  part-00000-01f80af5-3671-4d46-b499-382ff88a0e1e-c000.csv
src/data_output/department_breakdown.csv/: .part-00000-cc19a6e6-49b8-4f86-aa0b-85c83e315085-c000.csv.crc  .part-00000-e9bcc075-1b6a-45fa-94d5-568dd21eec9e-c000.csv.crc  part-00000-368d66a2-9490-4344-be6c-63436baa1881-c000.csv  part-00000-59f57fc8-1a98-43ca-b0d4-74b89db84a09-c000.csv
src/data_output/extra_insight_one.csv/: .part-00000-c78b3d4a-56d7-4c60-a93b-bffc4a766c60-c000.csv.crc  part-00000-fd7a8f8d-383a-4130-91ab-f245b9ef09a2-c000.csv
src/marketing_analysis_test_package.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utils/: log_manager.py  writer_csv.py
src/utils/logs/: current_log.log.2024-09-13_05-32  (+19 more)
tests/: test_analysis.py
(+12 files in other folders)
