[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marketing_analysis_test_package"
version = "0.1"
description = "An extremely fast marketing analyzer"
authors = [{ name = "Wasim Majanni", email = "waseemaj4@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
keywords = [
  "marketing"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
pythonpath = [
  "src","src/utils"
]


[tool.ruff.lint]
select = ["E", "F" ,"I" , "N"]
#ignore = ["F405" , "E501", "N812"]


[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true